fixed redline alignment

--- a/style.css
+++ b/style.css
@@ -256,4 +256,7 @@ svg{
         padding:0px 10px 0px 10px;
         margin: 80px 0px 30px 0px;
     }
+    .redline{
+        font-size:10px;
+    }
 }
